# skid_steer_robot

differential_drive_ws/: README.md  build.sh  dependencies.txt  install_deps.sh  setup.sh  setup_ros2.sh
differential_drive_ws/ec-dept-rover@rovasura.local/: .gitignore
differential_drive_ws/ec-dept-rover@rovasura.local/src/diffbot_control/: package.xml
differential_drive_ws/ec-dept-rover@rovasura.local/src/diffbot_control/config/: diffbot_ros2_control.urdf.xacro
differential_drive_ws/ec-dept-rover@rovasura.local/src/diffbot_control/diffbot_control/: motor_driver.py
differential_drive_ws/ec-dept-rover@rovasura.local/src/diffbot_control/resource/: diffbot_control
differential_drive_ws/ec-dept-rover@rovasura.local/src/diffbot_description/: CMakeLists.txt
differential_drive_ws/ec-dept-rover@rovasura.local/src/diffbot_msgs/: CMakeLists.txt  package.xml
differential_drive_ws/ec-dept-rover@rovasura.local/src/diffbot_sensors/: package.xml
differential_drive_ws/src/diffbot_bringup/: CMakeLists.txt  package.xml
differential_drive_ws/src/diffbot_bringup/config/: README.md
differential_drive_ws/src/diffbot_bringup/launch/: diffbot_bringup.launch.py  hardware_bringup.launch.py
differential_drive_ws/src/diffbot_bringup/worlds/: README.md  diffbot_world.world
differential_drive_ws/src/diffbot_control/: requirements.txt  setup.cfg  setup.py
differential_drive_ws/src/diffbot_control/config/: diffbot_controllers.yaml  motor_driver.yaml  motor_driver_4.yaml
differential_drive_ws/src/diffbot_control/diffbot_control/: __init__.py  motor_driver.py  motor_tester.py  robot_control_client.py  robot_controller.py  simple_motor_driver.py  teleop_keyboard.py
differential_drive_ws/src/diffbot_control/launch/: control.launch.py  motor_driver.launch.py  motor_driver_4.launch.py  robot_control.launch.py
differential_drive_ws/src/diffbot_control/scripts/: standalone_motor_control.py
differential_drive_ws/src/diffbot_description/: CMakeLists.txt  package.xml
differential_drive_ws/src/diffbot_description/meshes/: README.md
differential_drive_ws/src/diffbot_description/rviz/: display.rviz
differential_drive_ws/src/diffbot_navigation/: package.xml  setup.cfg  setup.py
differential_drive_ws/src/diffbot_sensors/: package.xml  setup.cfg  setup.py
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/ldlidar/share/ldlidar/: package.sh
ros2_ws/log/: latest_build
ros2_ws/src/skid_steer_robot/: CMakeLists.txt  README.md  SETUP_COMPLETE.md  install_dependencies.sh  model.config  model.sdf  package.xml  test_setup.py  world.sdf
ros2_ws/src/skid_steer_robot/config/: ros2_control.yaml
ros2_ws/src/skid_steer_robot/launch/: better_robot.sh  gazebo_garden_launch.py  include_robot.sh  minimal_gazebo.launch.py  sim.launch.py  simple_gazebo.sh  simple_sim.launch.py  test_gazebo.launch.py  test_simple.sh  urdf_sim.launch.py
ros2_ws/src/skid_steer_robot/urdf/: skid_steer.urdf  skid_steer.urdf.xacro
ros2_ws/src/skid_steer_robot/worlds/: better_robot_world.sdf  include_robot_world.sdf  simple_world.sdf  world.sdf
(+94 files in other folders)
